--- a/Fisconnect/package.json
+++ b/Fisconnect/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^12.7.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "photoswipe": "^4.1.3",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-photoswipe-gallery": "^1.3.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
