--- a/Fisconnect/package.json
+++ b/Fisconnect/package.json
@@ -2,7 +2,6 @@
   "name": "react-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lzfellipe.github.io/SWENG_project_22/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -24,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf docs && mv build docs",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
