--- a/Fisconnect/package.json
+++ b/Fisconnect/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "bootstrap": "^4.6.0",
+    "emailjs-com": "^2.6.4",
     "jquery": "^3.5.1",
     "photoswipe": "^4.1.3",
     "popper.js": "^1.16.1",
