--- a/Fisconnect/package.json
+++ b/Fisconnect/package.json
@@ -21,6 +21,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-scroll-motion": "^0.2.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
